	      (Toetsch).

2002-07-27

	* Additions:
	    - new driver program, "perl6" (Leopold Toetsch)
	    - mops.p6 performance test (Toetsch) (depressing)

	* Fixes:
	    - grammar uninitialized value warnings (John Kingsley)

2002-07-28

	* Additions:
	    - simple given/when cases.
	    - labels, loop control (e.g. "next")
	    - goto (considered harmful).

	    Note that this control flow is _not_ the "control flow
	    exceptions" mentioned in Apocalypse 4, but more standard
	    control flow with jumps.  As such, it doesn't play nicely with
	    exceptions.  If you jump out of a block with a CATCH clause,
	    you will lose somewhere down the road.

	* Fixes:
	    - underscores in numbers.
	    - block in sub resetting sub parameter list
	    - inplace operators (e.g. +=)
	    - bug in time0

	* Test-failures:
	    - 8.3 (Exceptions) -- stack is messed up.  Probably a P6C bug,
	      since the exception stuff is a bit fragile still.

2002-08-01

	* Additions:
	    - line numbers (Leo Toetsch)

	* Fixes:
	    - driver cleanup (Toetsch)

2002-08-04

	* Additions:
	    - minor test additions (Leo Toetsch)

2002-08-05

	* Fixes:
	    - update exception-handling code to work w/ new subs
	    - update anonymous subs, too
	
2002-08-07

	* Fixes:
	    - clean up bitrot in parser tests (Leo Toetsch)

2002-08-09

	* Fixes:
	    - clean up throw/CATCH (Leo -- a good use for weird
	      Continuation objects)

	* Additions:
	    - @ARGS, at last.

2002-08-10

	* Additions (Leo):
	    - corrected @ARGS, $0, $PROGRAM_NAME
	    - use real pow op
	    - new version of perl6 driver
	    - config script (pconfig.pl)

	* Fixes (Leo):
	    - tidied catch-blocks
	    - tidied flattening
	    - update config/gen/makefiles/perl6.in to call pconfig.pl

	* Broken (me, probably):
	    - "$x = @xs" will leave $x undefined.
	
2002-08-19

	* Additions:
	    - return values (documentation coming).

	* Test-failures:
	    - 3.{2,4-7}, a.2 -- register clobbering.
	    - 8.3 -- not sure